--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,28 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<header>
+		<nav>
+			<%= content_tag :ul, class: "nav_link_list" do %>
+				<%= content_tag :li, class: "nav_links" do %>
+					<%= link_to "Home", root_path %>
+				<% end %>
+				<% if user_signed_in? %>
+					<%= content_tag :li, class: "nav_links" do %>
+						<%= link_to "Your Tree", familymember_path(current_user) %>
+					<% end %>
+				<% end %>
+				<%= content_tag :li, class: "nav_links" do %>
+					<%= link_to "Edit Profile", edit_user_registration_path %>
+				<% end %>
+				<%= content_tag :li, class: "nav_links" do %>
+					<%= link_to "Sign Out", destroy_user_session_path, {method: :delete} %>
+				<% end %>
+			<% end %>
+		</nav>
+	</header>
+<div class="main_container">
+	<%= yield %>
+</div>
 </body>
 </html>
