--- a/app/assets/stylesheets/familymembers.scss
+++ b/app/assets/stylesheets/familymembers.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the familymembers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.new_familymember {
+	display: inline-block;
+}
+
+.members_list {
+	display: inline-block;
+}
