Created treescontroller with CRUD functionality. Closed #15. Made trees#index. Closed #10. Clicking on a tree will bring you to tree#show. Closed #11. Create new trees on index. Closed #12. Can edit a trees name on tree#show. Closed #13. Can destroy a tree on trees#index. Closed #14. Changed seed.rb since models have changed. Closed #25.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 				<% end %>
 				<% if user_signed_in? %>
 					<%= content_tag :li, class: "nav_links" do %>
-						<%= link_to "Your Tree", familymember_path(current_user) %>
+						<%= link_to "Your Trees", user_trees_path(current_user) %>
 					<% end %>
 				<% end %>
 				<%= content_tag :li, class: "nav_links" do %>
