familymember edit and destroy functioning. Closed #17. Closed #16.

--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -27,9 +27,33 @@
 <% end %>
 
 <%= content_tag :div, class: "members_list" do %>
-	<% @all_members.each do |m| %>
+	<% @all_members.each do |member| %>
 		<%= content_tag :p do %>
-			<%= m.first_name %>
+			<%= content_tag :p do %>
+				<%= member.first_name %><%= content_tag :span do %> <%= link_to "delete familymember", tree_familymember_path(@tree.id, member.id), controller: :familymembers, method: :delete %><% end %>
+			<% end %>
+			<%= form_for member, url: tree_familymember_path(@tree.id, member.id), method: :put do |f| %>
+				<%= f.label :first_name %>
+				<%= f.text_field :first_name %>
+				<br>
+				<%= f.label :last_name %>
+				<%= f.text_field :last_name %>
+				<br>
+				<%= f.label :birthday %>
+				<%= f.date_field :birthday %>
+				<br>
+				<%= f.label :death %>
+				<%= f.date_field :death %>
+				<br>
+				<%= f.label :birth_loc %>
+				<%= f.text_field :birth_loc %>
+				<br>
+				<%= f.label :death_loc %>
+				<%= f.text_field :death_loc %>
+				<br>
+				<%= f.submit :update %>
+			<% end %>
+			  
 		<% end %>
 	<% end %>
 <% end %>
