Edit form is working, create new child is working (Not ajax request). Delete familymember is working. Can't get gon variables to update via the AJAX requests. Edit form disappears when you click outside of it. Closed #38.

--- a/app/assets/stylesheets/trees.scss
+++ b/app/assets/stylesheets/trees.scss
@@ -53,10 +53,17 @@
 }
 
 .close_edit_form {
-		z-index: 10;
 		position: relative;
 		left: 0;
 		bottom: 0;
 		cursor: pointer;
 	}
+
+.main_svg {
+	width: 1000px;
+	height: 1000px;
+	.main_g {
+		transform: translate(50, 50);
+	}
+}
 
