Can create a parent for existing familymember. Closed #34. Create partner for existing familymember. Closed #33. Create child for existing familymember. Closed #32.

--- a/app/assets/stylesheets/trees.scss
+++ b/app/assets/stylesheets/trees.scss
@@ -23,6 +23,7 @@
 	top: 0;
 	border: black solid 1px;
 	text-align: center;
+	background-color: #89C9FF;
 }
 
 .options_list {
@@ -49,6 +50,7 @@
 	height: 300px;
 	position: absolute;
 	border: black solid 1px;
+	background-color: #89C9FF;
 	
 }
 
@@ -67,3 +69,18 @@
 	}
 }
 
+.new_familymember {
+	width: 150px;
+	height: 300px;
+	position: absolute;
+	border: black solid 1px;
+	background-color: #89C9FF;
+}
+
+.new_partner_relationship {
+	width: 100px;
+	height: 100px;
+	position: absolute;
+	border: black solid 1px;
+	background-color: #89C9FF;
+}
