--- a/app/views/trees/_new_partner.html.erb
+++ b/app/views/trees/_new_partner.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @child, url: create_child_path(@tree.id, @child.id) do |f| %>
+<%= form_for @new_partner, url: create_partner_path(@tree.id) do |f| %>
 	<%= f.label :first_name %>
 	<%= f.text_field :first_name %>
 	<br>
@@ -17,6 +17,6 @@
 	<%= f.label :death_loc %>
 	<%= f.text_field :death_loc %>
 	<br>
-	<%= f.hidden_field :parent_id, :value => @parent.id %>
+	<%= f.hidden_field :partner_id, :value => @partner.id %>
 	<%= f.submit :create %>
 <% end %>
