--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -19,14 +19,10 @@
 			<%= link_to "New Child", new_child_path(@tree.id, @top.id), remote: true, class: "li_items", id: "child_item" %>
 		<% end %>
 		<%= content_tag :li, class: "option_item" do %>
-			<%= content_tag :span, class: "li_items", id: "parent_item" do %>
-				Parent
-			<% end %>
+			<%= link_to "New Parent", new_parent_path(@tree.id, @top.id), remote: true, class: "li_items", id: "parent_item" %>
 		<% end %>
 		<%= content_tag :li, class: "option_item" do %>
-			<%= content_tag :span, class: "li_items", id: "partner_item" do %>
-				Partner
-			<% end %>
+			<%= link_to "New Partner", new_partner_path(@tree.id, @top.id), remote: true, class: "li_items", id: "partner_item" %>
 		<% end %>
 		<%= content_tag :li, class: "option_item" do %>
 			<%= link_to "delete", tree_familymember_path(@tree.id, @top.id), remote: true, controller: :familymembers, method: :delete, class: "li_items", id: "delete_item" %>
