--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -3,6 +3,30 @@
 		<%= f.text_field :name %>
 		<%= f.submit :update %>
 <% end %> 
+<% unless @tree.familymembers? %>
+	<%= form_for @familymember, url: tree_familymembers_path(@tree.id) do |f| %>
+	<%= f.label :first_name %>
+	<%= f.text_field :first_name %>
+	<br>
+	<%= f.label :last_name %>
+	<%= f.text_field :last_name %>
+	<br>
+	<%= f.label :birthday %>
+	<%= f.date_field :birthday %>
+	<br>
+	<%= f.label :death %>
+	<%= f.date_field :death %>
+	<br>
+	<%= f.label :birth_loc %>
+	<%= f.text_field :birth_loc %>
+	<br>
+	<%= f.label :death_loc %>
+	<%= f.text_field :death_loc %>
+	<br>
+	<%= f.submit :create %>
+	<% end %>
+	  
+<% end %>
 
 <%= content_tag :svg, class: "main_svg" do %>
 	<%= content_tag :g, class: "main_g" do %>
@@ -10,29 +34,33 @@
 	<% end %>
 <% end %>
 <!-- BEGIN OPTIONS MODAL -->
-<%= content_tag :div, class: "options_modal" do %>
-	<%= content_tag :ul,  class: "options_list" do %>
-	<%= content_tag :li, class: "option_item" do %>
-			<%= link_to "Edit", edit_tree_familymember_path(@tree.id, @top.id), remote: true, class: "li_items", id: "edit_item" %>
-		<% end %>
+<% if @top %>
+	<%= content_tag :div, class: "options_modal" do %>
+		<%= content_tag :ul,  class: "options_list" do %>
 		<%= content_tag :li, class: "option_item" do %>
-			<%= link_to "New Child", new_child_path(@tree.id, @top.id), remote: true, class: "li_items", id: "child_item" %>
+				<%= link_to "View", tree_familymember_path(@tree.id, @top.id), class: "li_items", id: "view_item" %>
+			<% end %>
+			<%= content_tag :li, class: "option_item" do %>
+				<%= link_to "Edit", edit_tree_familymember_path(@tree.id, @top.id), remote: true, class: "li_items", id: "edit_item" %>
+			<% end %>
+			<%= content_tag :li, class: "option_item" do %>
+				<%= link_to "New Child", new_child_path(@tree.id, @top.id), remote: true, class: "li_items", id: "child_item" %>
+			<% end %>
+			<%= content_tag :li, class: "option_item" do %>
+				<%= link_to "New Parent", new_parent_path(@tree.id, @top.id), remote: true, class: "li_items", id: "parent_item" %>
+			<% end %>
+			<%= content_tag :li, class: "option_item" do %>
+				<%= link_to "New Partner", new_partner_path(@tree.id, @top.id), remote: true, class: "li_items", id: "partner_item" %>
+			<% end %>
+			<%= content_tag :li, class: "option_item" do %>
+				<%= link_to "delete", tree_familymember_path(@tree.id, @top.id), remote: true, controller: :familymembers, method: :delete, class: "li_items", id: "delete_item" %>
+			<% end %>
 		<% end %>
-		<%= content_tag :li, class: "option_item" do %>
-			<%= link_to "New Parent", new_parent_path(@tree.id, @top.id), remote: true, class: "li_items", id: "parent_item" %>
+		<%= content_tag :span, class: "close_modal" do %>
+			X
 		<% end %>
-		<%= content_tag :li, class: "option_item" do %>
-			<%= link_to "New Partner", new_partner_path(@tree.id, @top.id), remote: true, class: "li_items", id: "partner_item" %>
-		<% end %>
-		<%= content_tag :li, class: "option_item" do %>
-			<%= link_to "delete", tree_familymember_path(@tree.id, @top.id), remote: true, controller: :familymembers, method: :delete, class: "li_items", id: "delete_item" %>
-		<% end %>
-	<% end %>
-	<%= content_tag :span, class: "close_modal" do %>
-		X
 	<% end %>
 <% end %>
-	
 <!-- END OPTIONS MODAL -->
 
 <!-- BEGIN EDIT MODAL -->
