json call is working.

--- a/app/views/familymembers/destroy.js.erb
+++ b/app/views/familymembers/destroy.js.erb
@@ -1,7 +1,23 @@
 $("#delete_item").on("ajax:complete", function(){
-	var delete_member_id = $('#delete_item').attr('data');
-	$('.node[data=' + delete_member_id + ']').animate({"opacity": "0"}, 1000).delay(500).slideUp(1000);
-	console.log("Update gon variable...");
-	// gon.watch('familymembers', render);
+	// var delete_member_id = $('#delete_item').attr('data');
+	// $('.node[data=' + delete_member_id + ']').animate({"opacity": "0"}, 1000).delay(500).slideUp(1000);
+	// console.log("Update chart...");
+	// $('.main_svg').removeData('data-chart');
+	// $('.main_svg').removeAttr('data-chart');
+	// $('.main_svg').attr('data-chart', '<%= raw @chart %>');
+	// var chart = $('.main_svg').data('chart');
+	// console.log("Update data...");
+	// console.log('<%= raw @chart.to_json %>');
+	// render(chart);
+	// console.log('<%= @current_user.id %>');
+	var url = '/load/trees/' + <%= @tree.id %> + '/familymembers/';
+	// var url = '/trees/' + <%= @tree.id %> + '/familymembers/' + <%= @familymember.id %> + '/destroy';
+	d3.json(url, function(error, data){
+		console.log(data);
+		if (error) return console.warn(error);
+		console.log("DATA");
+		root = data[0];
+		render(data);
+	});
 });
 
