--- a/app/views/trees/_new_child.html.erb
+++ b/app/views/trees/_new_child.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @child, url: create_child_path(@tree.id, @child.id) do |f| %>
+<%= form_for @child, remote: true, url: create_child_path(@tree.id, @child.id) do |f| %>
 	<%= f.label :first_name %>
 	<%= f.text_field :first_name %>
 	<br>
