--- a/app/assets/stylesheets/trees.scss
+++ b/app/assets/stylesheets/trees.scss
@@ -2,38 +2,49 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.first_familymember_div {
+	text-align: center;
+}
+
 .tree_name {
 	a {
 	text-decoration: none;
 	}
 }
 
-.initial_svg {
-	width: 500px;
-	height: 500px;
-}
-
-.initial_rect {
-	fill: steelblue;
-	text-anchor: middle;
+.edit_tree {
+	text-align: center;
+	input {
+		background-color: transparent;
+		border: none;
+		text-align: center;
+		font: 25px $droid;
+		color: $green;
+	}
+	:focus {
+		outline: none;
+	}
 }
 
 .rect {
-	border-radius: 15px;
 	stroke-width:1;
 	stroke:rgb(0,0,0);
 	cursor: pointer;
 }
 
+.link {
+
+}
+
 .options_modal {
-	width: 100px;
-	height: 125px;
+	width: 125px;
+	height: 135px;
 	position: absolute;
-	left: -400px;
+	left: -800px;
 	top: 0;
-	border: black solid 1px;
+	border-radius: 15px;
 	text-align: center;
-	background-color: #89C9FF;
+	background-color: $green;
 }
 
 .options_list {
@@ -46,21 +57,30 @@
 	span {
 		font-size: 20px;
 	}
+	a {
+		color: $white;
+		transition: color 0.5s;
+		&:hover {
+			color: $red;
+		}
+	}
 }
 
 .close_modal {
 	position: absolute;
-	left: 90%;
-	bottom: 0;
+	left: 85%;
+	top: 0;
 	cursor: pointer;
 }
 
-.edit_familymember {
+.edit_familymember,
+.new_familymember {
 	width: 150px;
-	height: 300px;
+	height: 270px;
 	position: absolute;
-	border: black solid 1px;
-	background-color: #89C9FF;
+	border-radius: 15px;
+	background-color: $green;
+	color: $white;
 	
 }
 
@@ -72,19 +92,12 @@
 	}
 
 .main_svg {
-	width: 1000px;
+	width: 100%;
 	height: 1000px;
+	text-align: center;
 	.main_g {
 		// transform: translate(50, 50);
 	}
-}
-
-.new_familymember {
-	width: 150px;
-	height: 300px;
-	position: absolute;
-	border: black solid 1px;
-	background-color: #89C9FF;
 }
 
 .new_partner_relationship {
