--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -1,36 +1,41 @@
-<%= include_gon :watch => true %>
 <%= form_for @tree, method: :put do |f| %>
-		<%= f.label :change_name %>
 		<%= f.text_field :name %>
-		<%= f.submit :update %>
+		<%= f.submit :update, :style => "display: none;" %>
 <% end %> 
 <% unless @tree.familymembers? %>
-	<%= form_for @familymember, url: tree_familymembers_path(@tree.id) do |f| %>
-	<%= f.label :first_name %>
-	<%= f.text_field :first_name %>
-	<br>
-	<%= f.label :last_name %>
-	<%= f.text_field :last_name %>
-	<br>
-	<%= f.label :birthday %>
-	<%= f.date_field :birthday %>
-	<br>
-	<%= f.label :death %>
-	<%= f.date_field :death %>
-	<br>
-	<%= f.label :birth_loc %>
-	<%= f.text_field :birth_loc %>
-	<br>
-	<%= f.label :death_loc %>
-	<%= f.text_field :death_loc %>
-	<br>
-	<%= f.submit :create %>
+	<%= content_tag :div, class: "first_familymember_div" do %>
+		<%= content_tag :h3, class: "first_heading" do %>
+			Create your first familymember!
+		<% end %>
+		<%= form_for @familymember, url: tree_familymembers_path(@tree.id) do |f| %>
+		<%= f.label :first_name %>
+		<%= f.text_field :first_name %>
+		<br>
+		<%= f.label :last_name %>
+		<%= f.text_field :last_name %>
+		<br>
+		<%= f.label :birthday %>
+		<%= f.date_field :birthday %>
+		<br>
+		<%= f.label :death %>
+		<%= f.date_field :death %>
+		<br>
+		<%= f.label :birth_loc %>
+		<%= f.text_field :birth_loc %>
+		<br>
+		<%= f.label :death_loc %>
+		<%= f.text_field :death_loc %>
+		<br>
+		<%= f.submit :create %>
+		<% end %>
 	<% end %>
 	  
 <% end %>
 
 <%= content_tag :svg, class: "main_svg", data: {chart: @chart } do %>
-	
+	<%= content_tag :g, class: "main_g" do %>
+
+	<% end %>
 <% end %>
 <!-- BEGIN OPTIONS MODAL -->
 <% if @top %>
