--- a/app/views/trees/_new_child.html.erb
+++ b/app/views/trees/_new_child.html.erb
@@ -5,6 +5,9 @@
 	<%= f.label :last_name %>
 	<%= f.text_field :last_name %>
 	<br>
+	<%= f.label :gender %>
+	<%= f.select :gender, options_for_select([['male', 'male'], ['female', 'female'], ['transgender', 'transgender']]) %>
+	<br>
 	<%= f.label :birthday %>
 	<%= f.date_field :birthday %>
 	<br>
