--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -14,6 +14,9 @@
 		<%= f.label :last_name %>
 		<%= f.text_field :last_name %>
 		<br>
+		<%= f.label :gender %>
+		<%= f.select :male, :female %>
+		<br>
 		<%= f.label :birthday %>
 		<%= f.date_field :birthday %>
 		<br>
