--- a/app/views/trees/_new_parent.html.erb
+++ b/app/views/trees/_new_parent.html.erb
@@ -1,24 +1,18 @@
-<%= form_for @parent, url: create_parent_path(@tree.id, @parent.id) do |f| %>
-	<%= f.label :first_name %>
-	<%= f.text_field :first_name %>
-	<br>
-	<%= f.label :last_name %>
-	<%= f.text_field :last_name %>
-	<br>
-	<%= f.label :gender %>
+<%= form_for @parent, remote: true, url: create_parent_path(@tree.id, @parent.id) do |f| %>
 	<%= f.select :gender, options_for_select([['male', 'male'], ['female', 'female'], ['transgender', 'transgender']]) %>
+	<%= f.text_field :first_name, placeholder: "First name" %>
+	<br>
+	<%= f.text_field :last_name, placeholder: "Last name" %>
+	<br>
+	<%= f.text_field :birth_loc, placeholder: "Birth location" %>
+	<br>
+	<%= f.text_field :death_loc, placeholder: "Death location" %>
 	<br>
 	<%= f.label :birthday %>
 	<%= f.date_field :birthday %>
 	<br>
 	<%= f.label :death %>
 	<%= f.date_field :death %>
-	<br>
-	<%= f.label :birth_loc %>
-	<%= f.text_field :birth_loc %>
-	<br>
-	<%= f.label :death_loc %>
-	<%= f.text_field :death_loc %>
 	<br>
 	<%= f.hidden_field :child_id, :value => @child.id %>
 	<%= f.submit :create %>
