--- a/app/assets/stylesheets/trees.scss
+++ b/app/assets/stylesheets/trees.scss
@@ -92,9 +92,10 @@
 	}
 
 .main_svg {
+	overflow: scroll;
 	width: 100%;
 	height: 1000px;
-	text-align: center;
+	// text-align: center;
 	.main_g {
 		// transform: translate(50, 50);
 	}
