--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -5,7 +5,7 @@ $josefin: 'Josefin Sans', sans-serif;
 // colors
 $green: #2C946E;
 $red: #C51531;
-
+$chambray: #4E5783;
 
 // grayscales 
 $black: #555;
@@ -14,7 +14,6 @@ $gray: #AAA;
 $lightGray: #CCC;
 $offwhite: #EEE;
 $white: #FFF;
-
 // backgrounds
 
 $transparentGray: rgba(80, 80, 80, 0.7);
