--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,9 @@ body {
 }
 
 header {
-	margin: 25px 0;
+	background-color: $offwhite;
+	height:75px;
+	/*margin: 25px 0;*/
 }
 
 img.background {
@@ -48,6 +50,8 @@ input {
 }
 
 .nav_link_list {
+	margin: 0;
+	transform: translateY(75%);
 	padding: 0;
 	text-align: center;
 	list-style-type: none;
@@ -63,5 +67,5 @@ input {
 
 a {
 	text-decoration: none;
-	color: #4E5783;
+	color: $chambray;
 }
