--- a/app/views/familymembers/destroy.js.erb
+++ b/app/views/familymembers/destroy.js.erb
@@ -1,3 +1,4 @@
+$('.options_modal').css( {top: 0, left: -800});
 $("#delete_item").on("ajax:complete", function(){
 	$('.options_modal').css( {top: 0, left: -800});
 	var delete_member_id = $('#delete_item').attr('data');
