--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -2,6 +2,7 @@
 		<%= f.text_field :name %>
 		<%= f.submit :update, :style => "display: none;" %>
 <% end %> 
+
 <% unless @tree.familymembers? %>
 	<%= content_tag :div, class: "first_familymember_div" do %>
 		<%= content_tag :h3, class: "first_heading" do %>
@@ -45,13 +46,13 @@
 	<%= content_tag :div, class: "options_modal" do %>
 		<%= content_tag :ul,  class: "options_list" do %>
 		<%= content_tag :li, class: "option_item" do %>
-				<%= link_to "View", tree_familymember_path(@tree.id, @top.id), class: "li_items", id: "view_item" %>
+				<%= link_to "", tree_familymember_path(@tree.id, @top.id), class: "li_items fa fa-eye fa-2x", id: "view_item" %>
 			<% end %>
 			<%= content_tag :li, class: "option_item" do %>
-				<%= link_to "Edit", edit_tree_familymember_path(@tree.id, @top.id), remote: true, class: "li_items", id: "edit_item" %>
+				<%= link_to "", edit_tree_familymember_path(@tree.id, @top.id), remote: true, class: "li_items fa fa-pencil-square-o fa-2x", id: "edit_item" %>
 			<% end %>
 			<%= content_tag :li, class: "option_item" do %>
-				<%= link_to "New Child", new_child_path(@tree.id, @top.id), remote: true, class: "li_items", id: "child_item" %>
+				<%= link_to image_tag('marigoldicon.png', class: "icons"), new_child_path(@tree.id, @top.id), remote: true, class: "li_items", id: "child_item" %>
 			<% end %>
 			<%= content_tag :li, class: "option_item" do %>
 				<%= link_to "New Parent", new_parent_path(@tree.id, @top.id), remote: true, class: "li_items", id: "parent_item" %>
@@ -60,7 +61,7 @@
 				<%= link_to "New Partner", new_partner_path(@tree.id, @top.id), remote: true, class: "li_items", id: "partner_item" %>
 			<% end %>
 			<%= content_tag :li, class: "option_item" do %>
-				<%= link_to "delete", tree_familymember_path(@tree.id, @top.id), remote: true, controller: :familymembers, method: :delete, class: "li_items", id: "delete_item" %>
+				<%= link_to "", tree_familymember_path(@tree.id, @top.id), remote: true, controller: :familymembers, method: :delete, class: "li_items fa fa-trash-o fa-2x", id: "delete_item" %>
 			<% end %>
 		<% end %>
 		<%= content_tag :span, class: "close_modal" do %>
