--- a/app/assets/stylesheets/trees_index.scss
+++ b/app/assets/stylesheets/trees_index.scss
@@ -26,3 +26,12 @@
 		color: $red;
 	}
 }
+
+.filter {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	background-color: $offwhite;
+	opacity: 0.7;
+	z-index: -9;
+}
