--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,6 +1,7 @@
 // font-stacks
 $droid: 'Droid Serif', serif;
 $josefin: 'Josefin Sans', sans-serif;
+$lato: 'Lato-Light', sans-serif;
 
 // colors
 $green: #2C946E;
