--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
  @import "font-awesome";
 
 html {
-	font-family: $droid;
+	font-family: $lato;
 }
 
 body {
@@ -29,9 +29,9 @@ body {
 }
 
 header {
-	background-color: $offwhite;
-	height:50px;
-	/*margin: 25px 0;*/
+	/*background-image: url('marigoldr.jpg');*/
+	height:230px;
+	text-align: center;
 }
 
 img.background {
@@ -46,8 +46,14 @@ input {
 
 .main_container {
 	width: 100%;
+	height: 100%;
 	margin: 0 auto;
 	position: relative;
+}
+
+#flash_alert, #flash_notice {
+	color: white;
+	margin-left: 100px;
 }
 
 .nav_link_list {
@@ -56,6 +62,7 @@ input {
 	padding: 0;
 	text-align: center;
 	list-style-type: none;
+
 }
 
 .nav_links {
@@ -63,10 +70,11 @@ input {
 	a {
 		font-size: 25px;
 		padding: 0 25px 0 25px;
+		color: $offwhite;
 	}
 }
 
 a {
 	text-decoration: none;
-	color: $chambray;
+	
 }
