--- a/app/assets/stylesheets/trees_index.scss
+++ b/app/assets/stylesheets/trees_index.scss
@@ -1,5 +1,3 @@
- @import "variables";
-
 .trees_container {
 
 }
@@ -10,17 +8,25 @@
 
 .new_tree_heading {
 	text-align: center;
-	color: #4E5783;
+	color: $chambray;
 }
 
 .tree_name {
 	text-align: center;
 	margin: 30px 0;
 	font-size: 30px;
+	.tree_link {
+		color: $chambray;
+		transition: border 3.0s;
+		&:hover {
+		border-bottom: $chambray solid 2px;
+		}
+	}
+	
 }
 
 .tree_destroy {
-	color: $lightGray;
+	color: white;
 	transition: color 0.5s;
 	&:hover {
 		color: $red;
@@ -30,8 +36,9 @@
 .filter {
 	width: 100%;
 	height: 100%;
-	position: fixed;
+	min-height: 500px;
+	position: absolute;
 	background-color: $offwhite;
-	opacity: 0.7;
+	opacity: 0.8;
 	z-index: -9;
 }
