--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,5 @@
-<%= link_to "Back", :back %>
-<%= content_tag :div, class: "edit_form" do %>
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= content_tag :div, class: "edit_form_div" do %>
+<h2>Change Email/Password</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
