--- a/app/views/trees/index.html.erb
+++ b/app/views/trees/index.html.erb
@@ -1,4 +1,3 @@
-<%= image_tag "marigoldr.jpg", class: "background" %>
 <%= content_tag :div, class: "filter" do %>
 <% end %>
 <%= content_tag :h1, "Start a new tree", class: "new_tree_heading" %>
@@ -12,7 +11,7 @@
 	<% @trees.each do |tree| %>
 		<%= content_tag :div, class: "tree_divs" do %>
 			<%= content_tag :p, class: "tree_name" do %>
-				<%= link_to tree.name, user_tree_path(@current_user.id, tree.id) %> 
+				<%= link_to tree.name, user_tree_path(@current_user.id, tree.id), class: "tree_link" %>
 				<%= content_tag :span do %>
 					<%= link_to "delete", user_tree_path(@current_user.id, tree.id), controller: 'trees', method: 'delete', id: 'tree', action: 'destroy', class: "tree_destroy", data: { confirm: "Are you sure?" } %>
 				<% end %>
