--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -1,36 +1,31 @@
+<%= content_tag :div, class: "filter" do %>
+<% end %>
 <%= form_for @tree, method: :put do |f| %>
 		<%= f.text_field :name %>
 		<%= f.submit :update, :style => "display: none;" %>
 <% end %> 
-
 <% unless @tree.familymembers? %>
 	<%= content_tag :div, class: "first_familymember_div" do %>
 		<%= content_tag :h3, class: "first_heading" do %>
 			Create your first familymember!
 		<% end %>
 		<%= form_for @familymember, url: tree_familymembers_path(@tree.id) do |f| %>
-		<%= f.label :first_name %>
-		<%= f.text_field :first_name %>
-		<br>
-		<%= f.label :last_name %>
-		<%= f.text_field :last_name %>
-		<br>
-		<%= f.label :gender %>
-		<%= f.select :male, :female %>
-		<br>
-		<%= f.label :birthday %>
-		<%= f.date_field :birthday %>
-		<br>
-		<%= f.label :death %>
-		<%= f.date_field :death %>
-		<br>
-		<%= f.label :birth_loc %>
-		<%= f.text_field :birth_loc %>
-		<br>
-		<%= f.label :death_loc %>
-		<%= f.text_field :death_loc %>
-		<br>
-		<%= f.submit :create %>
+			<%= f.select :gender, options_for_select([['male', 'male'], ['female', 'female'], ['transgender', 'transgender']]) %>
+			<%= f.text_field :first_name, placeholder: "First name" %>
+			<br>
+			<%= f.text_field :last_name, placeholder: "Last name" %>
+			<br>
+			<%= f.text_field :birth_loc, placeholder: "Birth location" %>
+			<br>
+			<%= f.text_field :death_loc, placeholder: "Death location" %>
+			<br>
+			<%= f.label :birthday %>
+			<%= f.date_field :birthday %>
+			<br>
+			<%= f.label :death %>
+			<%= f.date_field :death %>
+			<br>
+			<%= f.submit :create %>
 		<% end %>
 	<% end %>
 	  
